added external pages to view poems

--- a/growing-up/index.html
+++ b/growing-up/index.html
@@ -35,7 +35,7 @@
           when i was twenty-four, i was a narcissist.
         </p>
         <p class="button-field">
-          <a href="../index.html" class="btn">Back</a>
+          <a href="/" class="btn">Back</a>
         </p>
       </article>
     </div>
