--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <nav>
     <ul class="navigation main">
-      <a href="index.html">
+      <a href="/">
         <li>HOME</li>
       </a>
       <!-- <a href="about/index.html">
@@ -23,10 +23,10 @@
       <div class="navigation poem-list">
         <h3>Poems by Suzanne</h3>
         <ul>
-          <li onclick='poemSelect("poem1", "los-angeles/index.html")'>LA Dreams</li>
-          <li onclick='poemSelect("poem2", "brain-to-brain/index.html")'>Brain to Brain</li>
-          <li onclick='poemSelect("poem3", "growing-up/index.html")'>Growing Up</li>
-          <li onclick='poemSelect("poem4", "fried-chicken/index.html")'>Fried Chicken</li>
+          <li onclick='poemSelect("poem1", "/los-angeles/")'>LA Dreams</li>
+          <li onclick='poemSelect("poem2", "/brain-to-brain/")'>Brain to Brain</li>
+          <li onclick='poemSelect("poem3", "/growing-up/")'>Growing Up</li>
+          <li onclick='poemSelect("poem4", "/fried-chicken/")'>Fried Chicken</li>
         </ul>
       </div>
     </div>
