--- a/brain-to-brain/index.html
+++ b/brain-to-brain/index.html
@@ -22,7 +22,7 @@
           from brain to brain<br><br>
         </p>
         <p class="button-field">
-          <a href="../index.html" class="btn">Back</a>
+          <a href="/" class="btn">Back</a>
         </p>
       </article>
     </div>
