--- a/fried-chicken/index.html
+++ b/fried-chicken/index.html
@@ -40,7 +40,7 @@
           still.<br><br>
         </p>
         <p class="button-field">
-          <a href="../index.html" class="btn">Back</a>
+          <a href="/" class="btn">Back</a>
         </p>
       </article>
     </div>
