--- a/los-angeles/index.html
+++ b/los-angeles/index.html
@@ -47,7 +47,7 @@
           and drove back east.<br><br>
         </p>
         <p class="button-field">
-          <a href="../index.html" class="btn">Back</a>
+          <a href="/" class="btn">Back</a>
         </p>
       </article>
     </div>
